--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "lodash": "^4.17.5",
+    "node-fetch": "^2.1.2",
     "node-xlsx": "^0.12.0",
+    "phantom": "^4.0.12",
     "winston": "^3.0.0-rc4"
   },
   "name": "jasonff-tb",
